# notice_board

./: .env.sample  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
advertisements/: admin.py  models.py  paginators.py  serializers.py  tests.py  urls.py  views.py
advertisements/migrations/: 0001_initial.py  0002_initial.py  0003_alter_review_advertisement.py  0004_comment_delete_review.py
config/: settings.py  urls.py
htmlcov/: index.html
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/fixtures/: groups_fixture.json
users/management/commands/: add_groups.py  create_simple_user.py  create_super_user.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_remove_user_token.py  0004_alter_user_managers.py
