[tool.poetry]
name = "notice-board"
version = "0.1.0"
description = ""
authors = ["Surkova Veronika surkova_nika92@mail.ru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
psycopg2 = "^2.9.10"
python-dotenv = "^1.1.0"
djangorestframework = "^3.16.0"
black = "^25.1.0"
isort = "^6.0.1"
pillow = "^11.2.1"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.0"
coverage = "^7.8.0"
flake8 = "^7.2.0"
django-cors-headers = "^4.7.0"
drf-yasg = "^1.21.10"
redis = "^5.2.1"
requests = "^2.32.3"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.1.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
